add redis / change pub/sub

--- a/demo/bin/main/application.properties
+++ b/demo/bin/main/application.properties
@@ -1,9 +1,9 @@
 
 # ADMIN (SpringApplicationAdminJmxAutoConfiguration)
-spring.application.admin.enabled=false
-spring.application.admin.jmx-name=org.springframework.boot:type=Admin,name=SpringApplication # JMX name of the application admin MBean.
 spring.devtools.livereload.enabled=true
 spring.devtools.restart.enabled=false
 spring.freemarker.cache=false
 spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
+spring.redis.host=localhost
+spring.redis.port=6379
