--- a/demo/bin/main/application.properties
+++ b/demo/bin/main/application.properties
@@ -5,5 +5,4 @@ spring.devtools.restart.enabled=false
 spring.freemarker.cache=false
 spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
-spring.redis.host=localhost
-spring.redis.port=6379
+spring.profiles.active=local
