Spring Security + Jwt 적용으로 회원 정보 연동, token으로 통신 보안 강화

--- a/demo/bin/main/application.properties
+++ b/demo/bin/main/application.properties
@@ -6,3 +6,4 @@ spring.freemarker.cache=false
 spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
 spring.profiles.active=local
+spring.jwt.secret=govlepel@$&
