--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     implementation 'org.webjars:sockjs-client:1.1.2'
     implementation 'org.webjars:stomp-websocket:2.3.3-1'
     implementation 'com.google.code.gson:gson:2.8.0'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     compile group: 'it.ozimov', name: 'embedded-redis', version: '0.7.2'
 	compileOnly 'org.projectlombok:lombok'
