--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.freemarker.cache=false
 spring.freemarker.template-loader-path=classpath:/templates/
 spring.freemarker.suffix=.ftl
 spring.profiles.active=local
+spring.jwt.secret=govlepel@$&
